# SemiHonestYaoGC

./: CMakeLists.txt  README.md
include/: YaoParties.hpp
resources/circuit/: AndCircuit.txt
resources/config/: YaoConfig.txt
src/: YaoParties.cpp  main.cpp
